--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JG University Clubs</title>
-    <link rel="stylesheet" href="../CSS_Files/index_style.css">
+    <link rel="stylesheet" href="./CSS_Files/index_style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;600&display=swap"
         rel="stylesheet">
@@ -287,7 +287,7 @@
         </div>
     </footer>
 
-    <script src="../JAVASCRIPT_Files/index_script.js"></script>
+    <script src="./JAVASCRIPT_Files/index_script.js"></script>
 </body>
 
 </html>
