Fix file paths for images, navbar links, and assets

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         </div>
         <nav class="navbar">
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="description.html">Clubs</a></li>
-                <li><a href="sponser.html">Sponsors</a></li>
-                <li><a href="payment.html">Payment</a></li>
-                <li><a href="profilepage.html">Members</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./HTML_Files/description.html">Clubs</a></li>
+                <li><a href="./HTML_Files/sponser.html">Sponsors</a></li>
+                <li><a href="./HTML_Files/profilepage.html">Members</a></li>
+                <li><a href="./HTML_Files/payment.html">Payment</a></li>
             </ul>
 
             <div class="logo">
-                <img src="/images/index_images/jg-logo.png" alt="JGCT Logo">
+                <img src="./images/index_images/jg-logo.png" alt="JGCT Logo">
             </div>
 
             <div class="search-bar">
@@ -272,9 +272,12 @@
             <div class="quick-links">
                 <h3>Follow Us</h3>
                 <div class="social-icons">
-                    <a href="#" target="_blank"><img src="/images/index_images/icons/facebook-icon-png.png" alt="Facebook"></a>
-                    <a href="#" target="_blank"><img src="/images/index_images/icons/instagram-icon-png.png" alt="Instagram"></a>
-                    <a href="#" target="_blank"><img src="/images/index_images/icons/linkedin-icon.png" alt="LinkedIn"></a>
+                    <a href="#" target="_blank"><img src="/images/index_images/icons/facebook-icon-png.png"
+                            alt="Facebook"></a>
+                    <a href="#" target="_blank"><img src="/images/index_images/icons/instagram-icon-png.png"
+                            alt="Instagram"></a>
+                    <a href="#" target="_blank"><img src="/images/index_images/icons/linkedin-icon.png"
+                            alt="LinkedIn"></a>
                     <a href="#" target="_blank"><img src="/images/index_images/icons/X-icon-png.png" alt="X"></a>
                 </div>
             </div>
