--- a/HTML_Files/description.html
+++ b/HTML_Files/description.html
@@ -11,11 +11,11 @@
 <body>
   <nav class="navbar">
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="description.html">Clubs</a></li>
-      <li><a href="sponser.html">Sponsors</a></li>
-      <li><a href="payment.html">Payment</a></li>
-      <li><a href="profilepage.html">Members</a></li>
+      <li><a href="/index.html">Home</a></li>
+      <li><a href="./description.html">Clubs</a></li>
+      <li><a href="./sponser.html">Sponsors</a></li>
+      <li><a href="./payment.html">Payment</a></li>
+      <li><a href="./profilepage.html">Members</a></li>
     </ul>
 
     <div class="logo">
