Images should load now

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="events-grid">
             <!-- Event Card 1 -->
             <div class="event-card">
-                <img src="/images/index_images/Events/tech-fest.jpg" alt="Event 1">
+                <img src="./images/index_images/Events/tech-fest.jpg" alt="Event 1">
                 <h3>Tech Fest 2024</h3>
                 <p class="event-date">March 15, 2024 | 10:00 AM</p>
                 <p class="event-description">
@@ -73,7 +73,7 @@
             </div>
             <!-- Event Card 2 -->
             <div class="event-card">
-                <img src="/images/index_images/Events/Music-night.jpg" alt="Event 2">
+                <img src="./images/index_images/Events/Music-night.jpg" alt="Event 2">
                 <h3>Music Night</h3>
                 <p class="event-date">April 10, 2024 | 6:00 PM</p>
                 <p class="event-description">
@@ -98,7 +98,7 @@
         <div class="clubs-grid">
             <!-- Club Card 1 -->
             <div class="club-card">
-                <img src="/images/index_images/Clubs/music-club.jpg" alt="Music Club">
+                <img src="./images/index_images/Clubs/music-club.jpg" alt="Music Club">
                 <div class="club-info">
                     <h3>Music Club</h3>
                     <p>Unleash your inner artist and jam with fellow music lovers. Join us for live gigs, workshops, and
@@ -108,7 +108,7 @@
             </div>
             <!-- Club Card 2 -->
             <div class="club-card">
-                <img src="/images/index_images/Clubs/robotics-club.jpg" alt="Robotics Club">
+                <img src="./images/index_images/Clubs/robotics-club.jpg" alt="Robotics Club">
                 <div class="club-info">
                     <h3>Robotics Club</h3>
                     <p>Join the innovators of tomorrow as we design, build, and program cutting-edge robots for
@@ -136,14 +136,14 @@
         <!-- Important Updates Panel -->
         <div class="updates-panel">
             <div class="update-card">
-                <img src="/images/index_images/icons/registration-icon-png.png" alt="Registration">
+                <img src="./images/index_images/icons/registration-icon-png.png" alt="Registration">
                 <div class="update-info">
                     <h3>Sports Meet 2024</h3>
                     <p>Don't miss out! Register now for the annual sports event. Deadline: Dec 31.</p>
                 </div>
             </div>
             <div class="update-card">
-                <img src="/images/index_images/icons/alumni-icon-png.png" alt="Alumni Meet">
+                <img src="./images/index_images/icons/alumni-icon-png.png" alt="Alumni Meet">
                 <div class="update-info">
                     <h3>Alumni Meet 2024</h3>
                     <p>Reconnect and network with alumni at our Annual Meet on Jan 15.</p>
@@ -174,7 +174,7 @@
                 </p>
             </div>
             <div class="about-image">
-                <img src="/images/index_images/Teamwork/teamwork.jpg" alt="Teamwork at JG University">
+                <img src="./images/index_images/Teamwork/teamwork.jpg" alt="Teamwork at JG University">
             </div>
         </div>
     </section>
@@ -186,7 +186,7 @@
         <div class="testimonials-grid">
             <!-- Testimonial Card 1 -->
             <div class="testimonial-card">
-                <img src="/images/index_images/Testimonials/priya-mehta" alt="Student 1" class="profile-picture">
+                <img src="./images/index_images/Testimonials/priya-mehta" alt="Student 1" class="profile-picture">
                 <div class="testimonial-info">
                     <h3>Priya Mehta</h3>
                     <p class="club-name">Music Club</p>
@@ -196,7 +196,7 @@
             </div>
             <!-- Testimonial Card 2 -->
             <div class="testimonial-card">
-                <img src="/images/index_images/Testimonials/Rohan sharma" alt="Student 2" class="profile-picture">
+                <img src="./images/index_images/Testimonials/Rohan sharma" alt="Student 2" class="profile-picture">
                 <div class="testimonial-info">
                     <h3>Rohan Sharma</h3>
                     <p class="club-name">Robotics Club</p>
@@ -214,36 +214,36 @@
         <div class="sponsors-carousel">
             <!-- Sponsor Logo 1 -->
             <div class="sponsor-card">
-                <img src="/images/index_images/Sponsors/coding-pro.png" alt="Sponsor 1">
+                <img src="./images/index_images/Sponsors/coding-pro.png" alt="Sponsor 1">
             </div>
             <!-- Sponsor Logo 2 -->
             <div class="sponsor-card">
-                <img src="/images/index_images/Sponsors/ibm.png" alt="Sponsor 2">
+                <img src="./images/index_images/Sponsors/ibm.png" alt="Sponsor 2">
             </div>
             <!-- Sponsor Logo 3 -->
             <div class="sponsor-card">
-                <img src="/images/index_images/Sponsors/aventure.png" alt="Sponsor 3">
+                <img src="./images/index_images/Sponsors/aventure.png" alt="Sponsor 3">
             </div>
             <div class="sponsor-card">
-                <img src="/images/index_images/Sponsors/asian-african.png" alt="Sponsor 4">
+                <img src="./images/index_images/Sponsors/asian-african.png" alt="Sponsor 4">
             </div>
             <div class="sponsor-card">
-                <img src="/images/index_images/Sponsors/samy.png" alt="Sponsor 5">
+                <img src="./images/index_images/Sponsors/samy.png" alt="Sponsor 5">
             </div>
             <div class="sponsor-card">
-                <img src="/images/index_images/Sponsors/isro.png" alt="Sponsor 6">
+                <img src="./images/index_images/Sponsors/isro.png" alt="Sponsor 6">
             </div>
             <div class="sponsor-card">
-                <img src="/images/index_images/Sponsors/yudiz.png" alt="Sponsor 7">
+                <img src="./images/index_images/Sponsors/yudiz.png" alt="Sponsor 7">
             </div>
             <div class="sponsor-card">
-                <img src="/images/index_images/Sponsors/virtual-height.png" alt="Sponsor 8">
+                <img src="./images/index_images/Sponsors/virtual-height.png" alt="Sponsor 8">
             </div>
             <div class="sponsor-card">
-                <img src="/images/index_images/Sponsors/sac.png" alt="Sponsor 9">
+                <img src="./images/index_images/Sponsors/sac.png" alt="Sponsor 9">
             </div>
             <div class="sponsor-card">
-                <img src="/images/index_images/Sponsors/dev-it-simplified.png" alt="Sponsor 10">
+                <img src="./images/index_images/Sponsors/dev-it-simplified.png" alt="Sponsor 10">
             </div>
             <!-- Add more sponsor logos as needed -->
         </div>
@@ -272,13 +272,13 @@
             <div class="quick-links">
                 <h3>Follow Us</h3>
                 <div class="social-icons">
-                    <a href="#" target="_blank"><img src="/images/index_images/icons/facebook-icon-png.png"
+                    <a href="#" target="_blank"><img src="./images/index_images/icons/facebook-icon-png.png"
                             alt="Facebook"></a>
-                    <a href="#" target="_blank"><img src="/images/index_images/icons/instagram-icon-png.png"
+                    <a href="#" target="_blank"><img src="./images/index_images/icons/instagram-icon-png.png"
                             alt="Instagram"></a>
-                    <a href="#" target="_blank"><img src="/images/index_images/icons/linkedin-icon.png"
+                    <a href="#" target="_blank"><img src="./images/index_images/icons/linkedin-icon.png"
                             alt="LinkedIn"></a>
-                    <a href="#" target="_blank"><img src="/images/index_images/icons/X-icon-png.png" alt="X"></a>
+                    <a href="#" target="_blank"><img src="./images/index_images/icons/X-icon-png.png" alt="X"></a>
                 </div>
             </div>
             <a href="mailto:clubs@jgu.edu" class="cta-button">Contact Us</a>
