--- a/HTML_Files/payment.html
+++ b/HTML_Files/payment.html
@@ -12,7 +12,7 @@
 <body>
   <nav class="navbar">
     <ul class="nav-links">
-      <li><a href="/index.html">Home</a></li>
+      <li><a href="./index.html">Home</a></li>
       <li><a href="./description.html">Clubs</a></li>
       <li><a href="./sponser.html">Sponsors</a></li>
       <li><a href="./payment.html">Payment</a></li>
