Hope this dumb jugad works

--- a/HTML_Files/description.html
+++ b/HTML_Files/description.html
@@ -11,7 +11,7 @@
 <body>
   <nav class="navbar">
     <ul class="nav-links">
-      <li><a href="./index.html">Home</a></li>
+      <li><a href="https://ishit-parikh.github.io/JGUniClubs.github.io/">Home</a></li>
       <li><a href="./description.html">Clubs</a></li>
       <li><a href="./sponser.html">Sponsors</a></li>
       <li><a href="./payment.html">Payment</a></li>
