Fix paths for icons and banner

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="banner">
-            <h1 class="banner-title">Welcome to JGU Clubs</h1>
+            <h1 class="banner-title">Welcome to JGUCT Clubs</h1>
         </div>
         <nav class="navbar">
             <ul class="nav-links">
