--- a/HTML_Files/description.html
+++ b/HTML_Files/description.html
@@ -28,32 +28,32 @@
 
   <main class="club-container">
     <div class="club-card" onclick="showDetails('robotics')">
-      <img src="/images/description_images/robotics.jpg" alt="Robotics Club">
+      <img src="../images/description_images/robotics.jpg" alt="Robotics Club">
       <h2>Robotics Club</h2>
       <p>Innovate and create cutting-edge robots!</p>
     </div>
     <div class="club-card" onclick="showDetails('cultural')">
-      <img src="/images/description_images/culture.jpg" alt="Cultural Club">
+      <img src="../images/description_images/culture.jpg" alt="Cultural Club">
       <h2>Cultural Club</h2>
       <p>Celebrate diversity and traditions!</p>
     </div>
     <div class="club-card" onclick="showDetails('music')">
-      <img src="/images/description_images/music.jpg" alt="Music Club">
+      <img src="../images/description_images/music.jpg" alt="Music Club">
       <h2>Music Club</h2>
       <p>Unleash your musical talent!</p>
     </div>
     <div class="club-card" onclick="showDetails('environment')">
-      <img src="/images/description_images/environment.jpg" alt="Environment Club">
+      <img src="../images/description_images/environment.jpg" alt="Environment Club">
       <h2>Environment Club</h2>
       <p>Make a difference for our planet!</p>
     </div>
     <div class="club-card" onclick="showDetails('technical')">
-      <img src="/images/description_images/technical.jpg" alt="Technical Club">
+      <img src="../images/description_images/technical.jpg" alt="Technical Club">
       <h2>Technical Club</h2>
       <p>Learn and apply technical skills!</p>
     </div>
     <div class="club-card" onclick="showDetails('sports')">
-      <img src="/images/description_images/sports.jpg" alt="Sports Club">
+      <img src="../images/description_images/sports.jpg" alt="Sports Club">
       <h2>Sports Club</h2>
       <p>Stay active and competitive!</p>
     </div>
