--- a/HTML_Files/payment.html
+++ b/HTML_Files/payment.html
@@ -20,7 +20,7 @@
     </ul>
 
     <div class="logo">
-      <img src="/images/index_images/jg-logo.png" alt="JGCT Logo">
+      <img src="../images/index_images/jg-logo.png" alt="JGCT Logo">
     </div>
   </nav>
   <header>
@@ -70,9 +70,9 @@
         <h3><i class="fas fa-credit-card"></i> PAYMENT</h3>
         <form id="paymentForm">
           <p>Accepted Cards</p>
-          <img src="/images/payment_image/card1.png" width="100" alt="Card 1" />
-          <img src="/images/payment_image/card2.png" width="50" alt="Card 2" />
-          <img src="/images/payment_image/icon1.png" width="50" alt="G-Pay" id="gPayImage" style="cursor: pointer" />
+          <img src="../images/payment_image/card1.png" width="100" alt="Card 1" />
+          <img src="../images/payment_image/card2.png" width="50" alt="Card 2" />
+          <img src="../images/payment_image/icon1.png" width="50" alt="G-Pay" id="gPayImage" style="cursor: pointer" />
           <br /><br />
           <label>
             <i class="fas fa-credit-card"></i> Credit card number
