--- a/HTML_Files/profilepage.html
+++ b/HTML_Files/profilepage.html
@@ -20,7 +20,7 @@
     </ul>
 
     <div class="logo">
-      <img src="/images/index_images/jg-logo.png" alt="JGCT Logo">
+      <img src="../images/index_images/jg-logo.png" alt="JGCT Logo">
     </div>
   </nav>
   <header>
