--- a/HTML_Files/sponser.html
+++ b/HTML_Files/sponser.html
@@ -19,7 +19,7 @@
     </ul>
 
     <div class="logo">
-      <img src="/images/index_images/jg-logo.png" alt="JGCT Logo">
+      <img src="../images/index_images/jg-logo.png" alt="JGCT Logo">
     </div>
   </nav>
   <header class="header">
