--- a/HTML_Files/description.html
+++ b/HTML_Files/description.html
@@ -23,7 +23,7 @@
     </div>
   </nav>
   <header class="header">
-    <h1>Our Clubsssss</h1>
+    <h1>Our Clubs</h1>
   </header>
 
   <main class="club-container">
