Gpay QR should work

--- a/HTML_Files/payment.html
+++ b/HTML_Files/payment.html
@@ -117,7 +117,7 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <h3>Scan QR Code with G-Pay</h3>
-      <img src="/images/payment_image/gpay-qr.jpg" alt="G-Pay QR Code" width="200" />
+      <img src="../images/payment_image/gpay-qr.jpg" alt="G-Pay QR Code" width="200" />
     </div>
   </div>
 
